Actions
Bug #14435
closedoverlay encapsulation bind failure error message is unhelpful
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
If you create an overlay and configure it to bind to an IP address which is not available, then it is not possible to create any VNICs on top of it. The error message returned in this case is, however, rather unhelpful.
bloody% pfexec dladm create-overlay -v 111 -e vxlan -s direct -p vxlan/listen_ip=10.10.10.10 -p vxlan/listen_port=4789 -p direct/dest_ip=127.0.0.2 -p direct/dest_port=5555 ov0 bloody% bloody% pfexec dladm create-vnic -l ov0 test0 dladm: vnic creation over ov0 failed: operation failed
Creating the IP address allows the VNIC to be created (since the vxlan encapsulation plugin can now create the necessary listening port):
bloody% pfexec ipadm create-addr -T static -a local=10.10.10.10/29 vioif0/test bloody% pfexec dladm create-vnic -l ov0 test0 bloody% bloody% dladm show-vnic LINK OVER SPEED MACADDRESS MACADDRTYPE VID test0 ov0 0 2:8:20:ee:30:66 random 0 bloody% bloody% netstat -anu | grep 4789 10.10.10.10.4789 Idle
The error message here should be improved.
Related issues
Updated by Andy Fiddaman 7 months ago
- Blocked by Feature #13500: Want support for overlay networks added
Updated by Andy Fiddaman 7 months ago
Following the change:
bloody:illumos:ov_14435_encapsbind# LD_LIBRARY_PATH=$ROOT/lib dladm create-vnic -l ov0 test0 dladm: vnic creation over ov0 failed: can't assign requested address
Updated by Andy Fiddaman 7 months ago
- Blocked by deleted (Feature #13500: Want support for overlay networks)
Updated by Andy Fiddaman 7 months ago
- Related to Feature #13500: Want support for overlay networks added
Updated by Andy Fiddaman 6 months ago
And with the final version of the change:
# LD_LIBRARY_PATH=$ROOT/lib dladm create-vnic -l ov0 test0 dladm: warning: failed to start overlay device; could not open underlay socket: can't assign requested address dladm: vnic creation over ov0 failed: can't assign requested address
Updated by Electric Monk 5 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit bf41048984a6ceae3ab49d5d80ce3c32693924b1
commit bf41048984a6ceae3ab49d5d80ce3c32693924b1 Author: Andy Fiddaman <omnios@citrus-it.co.uk> Date: 2022-03-07T16:42:39.000Z 14435 overlay encapsulation bind failure error message is unhelpful Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions