14435 overlay encapsulation bind failure error message is unhelpful Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>